# mlwatch

./: .gitignore  README.md  pyproject.toml
mlwatch/: __init__.py  monitor.py
mlwatch/alerts/: __init__.py
mlwatch/core/: base.py
mlwatch/drift/: __init__.py  ks.py  mean_shift.py  psi.py
mlwatch/performance/: __init__.py  classification.py  regression.py
mlwatch/quality/: __init__.py
mlwatch/storage/: history.py
tests/: test_mlwatch.py
