[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlwatch"
version = "0.1.0"
description = "Lightweight ML monitoring — drift, performance, data quality, and alerts in one library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"
